! VMR-7 renderless: subtitles were not displayed except in fullscreen
! Ensure dynamic menus dependent on the currently playing media are updated when the media changes while a menu is opened
! DVB subtitles: Subtitles were sometimes only partially rendered with some parts disappearing immediately
! Ticket #2588, Subtitle renderer: The subtitle's shadow was not drawn when the subtitle's border was very thin
! Ticket #2773, Subtitle renderer: Fix possible artifacts when using karaoke effects
! Ticket #3437, Audio Switcher: Support fallback to another media type. For example, this enables audio decoders
  to fallback to normal decoding if bitstreaming isn't supported
! Ticket #3763, VMR-9 renderless and EVR-CP: The displayed subtitle was not updated when seeking while playback was paused
! Ticket #3775, "Play > Subtitles" menu could be mistakenly disabled when the internal subtitle renderer was unavailable
! Ticket #3999, Work around a crash in the math library for x64 builds
! Ticket #4011, Fix image saving for streams with characters not supported in path names
! Ticket #4013, Subtitle renderer: Fix a crash on malformed animated transforms (\t tags with no parameters)
! Ticket #4020, Update dialog: Fix incorrect version info when using Belarusian, Slovenian or Russian translations
! Ticket #4050, MPC-HC could crash when loading invalid DVB channel settings
! Ticket #4079, The "Save image/thumbnails" path was cut off in the status bar


1.7.3 - 02 February 2014
========================
+ New Galician and Vietnamese translations
+ Ticket #3873, Display tooltip with H/W decoder name on hover over status message
* Updated Armenian, Basque, British English, Simplified Chinese, French, German, Japanese, Malay,
  Polish, Portuguese (Brazil), Romanian, Slovak, Spanish, Swedish, Turkish and Ukrainian translations
! Some subtitle entries could have been missing depending on how they overlapped in time
! Ticket #2870, Fix rare visual glitches on status bar